force-app/main/default/objects/Bus_Pass__c/Bus_Pass__c.object-meta.xml
<CustomObject>
    <label>Bus Pass</label>
    <nameField>
        <label>Bus Pass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>