force-app/main/default/objects/Bus_Pass__c/fields/Amount_calculation__c.field-meta.xml
<CustomField>
    <fullName>Amount_calculation__c</fullName>
    <formula>((Kilometer__c  * 40)* 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>