force-app/main/default/objects/Bus_Pass__c/fields/Kilometer__c.field-meta.xml
<CustomField>
    <fullName>Kilometer__c</fullName>
    <label>Kilometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>