force-app/main/default/objects/Bus_Pass__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eachanari</fullName>
            </value>
            <value>
                <fullName>Sundarapuram</fullName>
            </value>
            <value>
                <fullName>Aathupalayam</fullName>
            </value>
            <value>
                <fullName>Ukkadam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>