force-app/main/default/objects/Bus_Pass__c/fields/No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days__c</fullName>
    <formula>End_Date__c  -  Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.Of.Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>