force-app/main/default/objects/Bus_Pass__c/fields/Pass_Name__c.field-meta.xml
<CustomField>
    <fullName>Pass_Name__c</fullName>
    <label>Pass Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>