force-app/main/default/objects/Bus_Pass__c/fields/Pass_Status__c.field-meta.xml
<CustomField>
    <fullName>Pass_Status__c</fullName>
    <label>Pass Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>