force-app/main/default/objects/Bus_Pass__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Bus Passes</relationshipLabel>
    <relationshipName>Bus_Passes</relationshipName>
    <type>Lookup</type>
</CustomField>