force-app/main/default/objects/Bus_Pass__c/fields/vaildity_days__c.field-meta.xml
<CustomField>
    <fullName>vaildity_days__c</fullName>
    <formula>MAX(
    0,
    ( Start_Date__c  +  No_Of_Days__c ) - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>validity days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>